--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,7 +12,7 @@ body {
 .header {
   position: absolute;
   width: 100%;
-  background-color: #3277a8;
+  background-color: #6ea0eb;
   height: 140px;
   padding: 0;
   margin-bottom: 5px;
@@ -24,7 +24,7 @@ body {
 .sticky {
   width: 100%;
   position: fixed;
-  background-color: #3277a8;
+  background-color: #6ea0eb;
   height: 50px;
   padding: 0;
   margin-bottom: 50px;
@@ -126,7 +126,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  height: calc(100vh - 140px);
+  height: calc(100vh - 180px);
   min-height: 500px;
   margin-bottom: 10px;
 }
@@ -167,33 +167,36 @@ body {
 .about-content {
   height: 65%;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
-.about-content-title {
+.about-content-item-title {
   text-align: center;
   font-weight: 600;
   font-size: 16px;
   color: white;
 }
 
-.about-content-container {
+.about-content-item-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   padding: 20px;
 }
 
-.about-content-header {
+.about-content-item-header {
   height: 33px;
-  background-color: #9c9797;
+  background-color: #403e3e;
   border-radius: 7px 7px 0 0;
   border-bottom: 1px solid #8c8787;
   text-align: center;
 }
 
-.about-content-text {
+.about-content-item-text {
   font-size: 14px;
   font-weight: 400;
+  margin-top: 0;
 }
 
 .about-tile-img {
@@ -205,17 +208,21 @@ body {
 .about-content-item {
   display: flex;
   width: 600px;
-  height: 300px;
-  min-height: 250px;
+  height: fit-content;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
   flex-direction: column;
 }
 
-.about-content-img {
+.about-content-item-img {
   height: 150px;
   width: 150px;
   margin-right: 20px;
   border-radius: 5px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.tech-container {
+  height: calc(100vh - 140px);
 }
 
 .thumbnail-container {
@@ -231,24 +238,30 @@ body {
 }
 
 .animated-slideshow-container {
-  background-color: #e8e6e3;
-  height: 350px;
-  min-height: 350px;
-  width: 100%;
+  background-color: #f5f2f2;
+  height: 400px;
+  min-height: 400px;
+  width: 800px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   box-shadow: 0px 3px 11px -4px rgba(0,0,0,0.75);
+  overflow: hidden;
+  border-radius: 0 0 10px 10px;
 }
 
 .animated-heading-container {
-  min-height: 60px;
-  height: 60px;
+  text-align: center;
+  height: 50px;
+  background-color: #403e3e;
+  width: 800px;
+  border-radius: 10px 10px 0 0;
 }
 
 .animated-heading {
-  color: #636262;
+  font-size: 20px;
+  color: #f7f2f2;
   letter-spacing: 1px;
   font-weight: 400;
 }
@@ -276,30 +289,53 @@ body {
 }
 
 .links {
-  height: 500px;
+  height: calc(100vh - 140px);
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  margin-top: 50px;
+  padding-left: 400px;
+  padding-right: 400px;
 }
 
 .link {
+  display: flex;
+  justify-content: center;
+  width: 33%;
 
 }
 
 .github-icon {
   border-radius: 10px;
-  width: 100px;
+  width: 130px;
+  transition: transform .2s;
 }
 
 .linkedin-icon {
-  width: 180px;
+  width: 140px;
+  transition: transform .2s;
 }
 
 .gmail-icon {
-  margin-right: 20px;
-  width: 160px;
+  width: 250px;
+  transition: transform .2s;
+}
+
+.github-icon:hover {
+  border-radius: 10px;
+  width: 130px;
+  transform: scale(1.05);
+}
+
+.linkedin-icon:hover {
+  width: 140px;
+  transform: scale(1.05);
+}
+
+.gmail-icon:hover {
+  width: 250px;
+  transform: scale(1.05);
 }
 
 .seperator {
