--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -223,6 +223,7 @@ body {
 
 .tech-container {
   height: calc(100vh - 140px);
+  /* width: 100%; */
 }
 
 .thumbnail-container {
@@ -237,29 +238,34 @@ body {
   margin-left: 20px;
 }
 
-.animated-slideshow-container {
-  background-color: #f5f2f2;
+.animated-container {
+
+}
+
+.animated-slideshow {
+  background-color: #f7f7f7;
   height: 400px;
   min-height: 400px;
-  width: 800px;
+  width: 750px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  box-shadow: 0px 3px 11px -4px rgba(0,0,0,0.75);
+  box-shadow: -5px 5px 15px -9px rgba(0,0,0,0.75);
   overflow: hidden;
-  border-radius: 0 0 10px 10px;
-}
-
-.animated-heading-container {
-  text-align: center;
-  height: 50px;
-  background-color: #403e3e;
-  width: 800px;
-  border-radius: 10px 10px 0 0;
+  /* border-radius: 0 0 0 0; */
 }
 
 .animated-heading {
+  text-align: center;
+  height: 50px;
+  background-color: #403e3e;
+  width: 1000px;
+  border-radius: 10px 0 0 0;
+  box-shadow: -5px 0px 11px -4px rgba(0,0,0,0.75);
+}
+
+.animated-heading-title {
   font-size: 20px;
   color: #f7f2f2;
   letter-spacing: 1px;
@@ -289,7 +295,7 @@ body {
 }
 
 .links {
-  height: calc(100vh - 140px);
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: row;
