--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,3 +1,4 @@
+{{ui-hooks did-insert=(action "activateScrolling")}}
 <div class="{{this.header}}">
   {{#if (eq this.header "header")}}
     <div class="header-content">
@@ -162,31 +163,35 @@
         <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/nodejs.png">
         <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/android.png">
       </div>
-      <AnimatedContainer class="animated-heading-container">
-        {{#animated-value this.currentTech use=this.transitionFade as |value|}}
-          <h2 class={{if this.isMobile "animated-heading-mobile" "animated-heading"}}>
-            {{value}}
-          </h2>
-        {{/animated-value}}
-      </AnimatedContainer>
-      <AnimatedContainer class="animated-slideshow-container">
+      <div class="animated-container">
+        <AnimatedContainer class="animated-heading">
+          {{#animated-value this.currentTech use=this.transitionFade as |value|}}
+            <h2 class={{if this.isMobile "animated-heading-mobile" "animated-heading-title"}}>
+              {{value}}
+            </h2>
+          {{/animated-value}}
+        </AnimatedContainer>
+        <div class="animated-content-container">
+          <AnimatedContainer class="animated-slideshow">
 
-        {{#animated-if (eq this.imgCount 0) duration=1500 use=this.transitionMove}}
-          <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/html-css-js.png">
-        {{/animated-if}}
-        {{#animated-if (eq this.imgCount 1) duration=1500 use=this.transitionMove}}
-          <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/ember-icon.svg">
-        {{/animated-if}}
-        {{#animated-if (eq this.imgCount 2) duration=1500 use=this.transitionMove}}
-          <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/spring.png">
-        {{/animated-if}}
-        {{#animated-if (eq this.imgCount 3) duration=1500 use=this.transitionMove}}
-          <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/nodejs.png">
-        {{/animated-if}}
-        {{#animated-if (eq this.imgCount 4) duration=1500 use=this.transitionMove}}
-          <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/android.png">
-        {{/animated-if}}
-      </AnimatedContainer>
+            {{#animated-if (eq this.imgCount 0) duration=1500 use=this.transitionMove}}
+              <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/html-css-js.png">
+            {{/animated-if}}
+            {{#animated-if (eq this.imgCount 1) duration=1500 use=this.transitionMove}}
+              <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/ember-icon.svg">
+            {{/animated-if}}
+            {{#animated-if (eq this.imgCount 2) duration=1500 use=this.transitionMove}}
+              <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/spring.png">
+            {{/animated-if}}
+            {{#animated-if (eq this.imgCount 3) duration=1500 use=this.transitionMove}}
+              <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/nodejs.png">
+            {{/animated-if}}
+            {{#animated-if (eq this.imgCount 4) duration=1500 use=this.transitionMove}}
+              <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/android.png">
+            {{/animated-if}}
+          </AnimatedContainer>
+        </div>
+      </div>
     </div>
 
     <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="cv">
@@ -225,4 +230,5 @@
      </a>
     </div>
   </div>
+  <div id="contact-bottom"></div>
 </div>
