--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -146,6 +146,7 @@
         {{/if}}
       </div>
     </div>
+    <div id="about-end"></div>
 
     <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="tech">
       <div class={{if this.isMobile "seperator-line-left-mobile" "seperator-line-left"}}></div>
@@ -193,6 +194,7 @@
         </div>
       </div>
     </div>
+    <div id="tech-end"></div>
 
     <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="cv">
       <div class={{if this.isMobile "seperator-line-left-mobile" "seperator-line-left"}}></div>
@@ -209,6 +211,7 @@
       <img class={{if this.isMobile "cv-image-small-mobile" "cv-image-small"}} src="images/cv1.jpg"/>
       <img class={{if this.isMobile "cv-image-small-mobile" "cv-image-small"}} src="images/cv2.jpg"/>
     </div>
+    <div id="cv-end"></div>
 
     <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="contact">
       <div class={{if this.isMobile "seperator-line-left-mobile" "seperator-line-left"}}></div>
@@ -230,5 +233,5 @@
      </a>
     </div>
   </div>
-  <div id="contact-bottom"></div>
+  <div id="contact-end"></div>
 </div>
