--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -9,32 +9,42 @@ body {
   height: 100%;
 }
 
+/* =========================================HEADER================================== */
+
 .header {
   position: absolute;
   width: 100%;
-  background-color: #6ea0eb;
+  background-color: #6a8ec8;
   height: 140px;
   padding: 0;
   margin-bottom: 5px;
-  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px 5px 4px -5px rgba(0,0,0,0.75);
   z-index: 999;
   letter-spacing: 1px;
+}
+
+.header.mobile {
+  height: 100px;
 }
 
 .sticky {
   width: 100%;
   position: fixed;
-  background-color: #6ea0eb;
-  height: 50px;
+  background-color: #6a8ec8;
+  height: 30px;
   padding: 0;
   margin-bottom: 50px;
-  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px 5px 4px -5px rgba(0,0,0,0.75);
   z-index: 999;
   letter-spacing: 1px;
 }
 
+.sticky.mobile {
+  height: 30px;
+}
+
 .header-content {
-  height: 90px;
+  height: 110px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,25 +52,40 @@ body {
   letter-spacing: 1px;
 }
 
+.header-content.mobile {
+  height: 70px;
+}
+
 .header-img {
-  width: 160px;
+  width: 220px;
   margin-bottom: 15px;
 }
 
-.header-title {
-  font-size: 14px;
-  display: flex;
-  flex-direction: row;
+.header-img.mobile {
+  width: 160px;
 }
+
+.header-sub-img {
+  width: 200px;
+}
+
+.header-sub-img.mobile {
+  width: 180px;
+}
+
+/* ===========================================NAVBAR============================== */
 
 .nav-bar {
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 50px;
+  height: 30px;
+  /* background-color: #7d9ccf; */
 }
 
 .nav-item {
+  font-size: 14px;
+  font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,11 +93,12 @@ body {
   width: 110px;
   text-decoration: none;
   color: #f7f1f0;
-  border-radius: 3px;
+  border-radius: 2px;
+  border-right: 1px solid #7d9ccf;
 }
 
 .active {
-  color: #f7f1f0;
+  color: #bd6966;
 }
 
 .disabled {
@@ -87,7 +113,7 @@ body {
   width: 110px;
   text-decoration: none;
   color: white;
-  background-color: #d6735a;
+  background-color: #5780c1;
 }
 
 .nav-item-text {
@@ -95,15 +121,27 @@ body {
   margin-right: 5px;
 }
 
-.nav-item-bracket {
-  font-size: 20px;
-  color: #962d1b;
-  font-weight: 800;
+.nav-item-text.mobile {
+  font-size: 14px;
 }
+
+.nav-item-bracket {
+  font-size: 14px;
+  color: #fcd00a;
+  font-weight: 800;
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+.nav-item-bracket.mobile {
+  font-size: 12px;
+}
+
+/* ==========================================BODY================================ */
 
 .body {
   overflow-x: hidden;
-  background-color: #fffcfd;
+  background-color: #f2f2f2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -112,7 +150,6 @@ body {
 }
 
 .content {
-  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,32 +158,66 @@ body {
   height: 100%;
 }
 
+.content.mobile {
+  margin-top: 100px;
+}
+
+/* ============================================ABOUT============================= */
+
 .about-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  height: calc(100vh - 180px);
-  min-height: 500px;
+  height: calc(100vh - 140px);
   margin-bottom: 10px;
+}
+
+.about-container.mobile {
+  height: calc(100vh - 100px);
 }
 
 .about-tiles {
   display: flex;
   flex-direction: row;
+  height: 40%;
+  overflow: hidden;
+}
+
+.about-tiles.mobile {
+  flex-direction: column;
   justify-content: space-around;
-  height: 35%;
-  padding-left: 200px;
-  padding-right: 200px;
+  align-items: center;
+  height: 100%;
+  overflow: visible;
 }
 
 .about-tile {
   position: relative;
   transition: transform .2s;
-  height: 180px;
-  width: 200px;
+  height: 100%;
+  width: 25%;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
   overflow: hidden;
+}
+
+.about-tile.mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 22%;
+  width: 95%;
+  opacity: .8;
+  box-shadow: 1px 2px 10px -4px rgba(0,0,0,0.75);
+  border-radius: 3px;
+}
+
+.about-tile.mobile:hover {
+  opacity: 1;
+}
+
+.about-tile:hover {
+  transform: scale(1.03);
 }
 
 .about-tile-title {
@@ -160,8 +231,67 @@ body {
   font-weight: 600;
 }
 
-.about-tile:hover {
-  transform: scale(1.05);
+.about-tile-img-text-1 {
+  text-align: center;
+  position: absolute;
+  top: 30px;
+  right: 170px;
+  width: 180px;
+}
+
+.about-tile-img-text-1.mobile {
+  top: 50px;
+  right: 160px;
+}
+
+.about-tile-img-text-2 {
+  text-align: center;
+  position: absolute;
+  top: 30px;
+  right: 150px;
+  width: 200px;
+}
+
+.about-tile-img-text-2.mobile {
+  top: 60px;
+  right: 140px;
+}
+
+.about-tile-img-text-3 {
+  text-align: center;
+  position: absolute;
+  top: 30px;
+  right: 90px;
+  width: 260px;
+}
+
+.about-tile-img-text-3.mobile {
+  top: 60px;
+  right: 80px;
+}
+
+.about-tile-img-text-4 {
+  text-align: center;
+  position: absolute;
+  top: 30px;
+  right: 150px;
+  width: 200px;
+}
+
+.about-tile-img-text-4.mobile {
+  top: 60px;
+  right: 140px;
+}
+
+.about-tile-img-bg {
+  height: 100%;
+  width: 100%;
+  background-color: #8faad6;
+  object-fit: cover;
+  object-position: 40% 50%;
+}
+
+.about-tile-img-bg.mobile {
 }
 
 .about-content {
@@ -193,18 +323,6 @@ body {
   text-align: center;
 }
 
-.about-content-item-text {
-  font-size: 14px;
-  font-weight: 400;
-  margin-top: 0;
-}
-
-.about-tile-img {
-  height: 110%;
-  width: 100%;
-  opacity: .3;
-}
-
 .about-content-item {
   display: flex;
   width: 600px;
@@ -220,6 +338,14 @@ body {
   border-radius: 5px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
 }
+
+.about-content-item-text {
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 0;
+}
+
+/* ==============================================TECH================================ */
 
 .tech-container {
   height: calc(100vh - 140px);
@@ -276,6 +402,8 @@ body {
   width: 450px;
 }
 
+/* ============================================CV================================= */
+
 .cv-container {
   display: flex;
   flex-direction: row;
@@ -293,6 +421,8 @@ body {
   width: 250px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
 }
+
+/* ============================================CONTACT=========================== */
 
 .links {
   height: 100vh;
@@ -376,113 +506,68 @@ body {
 
 /* ------------------------------------ Mobile ----------------------------------------------- */
 
-.about-text-mobile {
+
+.about-tile--mobile:hover {
+  opacity: 1;
+  box-shadow: 2px 3px 11px -4px rgba(0,0,0,0.75);
+}
+
+.about-tile-title--mobile {
   font-size: 12px;
-  font-weight: 300;
-  color: #636262;
-  margin-right: 30px;
-  margin-left: 30px;
-  letter-spacing: 1px;
-  margin-top: 0;
-}
-
-.about-img-mobile {
-  width: 120px;
-  height: 140px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
-  margin-left: 30px;
-  margin-bottom: 20px;
-}
-
-.header-img-mobile {
-  width: 150px;
-  margin-bottom: 15px;
-}
-
-.header-title-mobile {
-  font-size: 14px;
-  font-weight: 300;
-  margin: 0;
-  color: #dddce8;
-}
-
-.nav-item-mobile {
-  font-size: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  right: -10px;
+  color: #330b08;
+  letter-spacing: 2px;
   width: 100px;
-  text-decoration: none;
-  color: #dddce8;
-  border-radius: 3px;
+  font-weight: 600;
 }
 
-.content-mobile {
-  padding-top: 20px;
+.about-content-item--mobile {
+  display: flex;
+  width: 90%;
+  height: fit-content;
+  box-shadow: 0px 8px 8px -8px rgba(0,0,0,0.75);
+  flex-direction: column;
+}
+
+.about-content-item-header--mobile {
+  height: 25px;
+  background-color: #403e3e;
+  border-radius: 7px 7px 0 0;
+  border-bottom: 1px solid #8c8787;
+  text-align: center;
+}
+
+.about-content-item-title--mobile {
+  text-align: center;
+  font-weight: 600;
+  font-size: 13px;
+  color: white;
+  margin-top: 6px;
+}
+
+.about-content-item-container--mobile {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background-color: #fff;
-  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
-  width: 100%;
-  margin-top: 140px;
+  padding: 8px;
 }
 
-.about-top-mobile {
-  width: 100%;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.about-middle-mobile {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.about-bottom-mobile {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.code-text-mobile {
-  width: 80%;
-  font-family: monospace;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border: 3px solid #fffafb;
-  border-radius: 7px;
-  background-color: #434547;
-  font-size: 12px;
-  font-weight: 300;
-  color: #f2f4f7;
-  min-width: 300px;
-  max-width: 6000px;
-  min-height: 40px;
+.about-content-item-img--mobile {
+  height: 100px;
+  width: 100px;
+  margin-right: 15px;
+  border-radius: 5px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
-  transition: transform .2s;
 }
 
-.about-img-mobile {
-  width: 80px;
-  height: 80px;
+.about-content-item-text--mobile {
+  font-size: 12px;
+  font-weight: 400;
 }
-
-/* .code-text-mobile:hover {
-  transform: scale(1.03);
-} */
 
 .thumbnail-container-mobile {
   height: 60px;
